--- a/Website/templates/about.html
+++ b/Website/templates/about.html
@@ -19,7 +19,7 @@
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
-<body class="">
+<body class="" style=" background:#e6f1f2">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
@@ -35,16 +35,16 @@
           <span class="icon-bar"></span>
         </button>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
+       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a style = "color: #8884d9;" href="./index.html" title="">01 : Home</a></li>
+<!--          <li><a style = "color: cyan;" href="./works.html" title="">02 : Works</a></li>-->
+          <li><a style = "color: #8884d9;" href="./about.html" title="">02 : About me</a></li>
+          <li><a style = "color: #8884d9;" href="./contact.html" title="">03 : Contact</a></li>
         </ul>
 
 
-      </div> 
+      </div>
     </div>
   </nav>
 </header>
@@ -54,20 +54,20 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : About me</h1>
+            <h1 class="h2">02 : About me</h1>
           </div>
-          
+
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius.
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
                   <h3>Ut enim ad minim </h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   <h3>Maecenas luctus at sem quis varius</h3>
                   <p>
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
@@ -78,23 +78,14 @@
               </div>
             </div>
           </div>
-          
-          
+
+
        </div>
       </div>
     </div>
   </div>
 
 
-<footer class="footer-container text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-      </div>
-    </div>
-  </div>
-</footer>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
