--- a/Website/templates/contact.html
+++ b/Website/templates/contact.html
@@ -19,7 +19,7 @@
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
-<body class="">
+<body class="" style=" background:#e6f1f2">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
@@ -37,10 +37,10 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a style = "color: #8884d9;" href="./index.html" title="">01 : Home</a></li>
+<!--          <li><a style = "color: cyan;" href="./works.html" title="">02 : Works</a></li>-->
+          <li><a style = "color: #8884d9;" href="./about.html" title="">02 : About me</a></li>
+          <li><a style = "color: #8884d9;" href="./contact.html" title="">03 : Contact</a></li>
         </ul>
 
 
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
+            <h1 class="h2">03 : Contact me</h1>
           </div>
           
           <div class="row">
@@ -91,18 +91,18 @@
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Hyderabad, India
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
+<!--                      <a href="http://www.twitter.com" title="" class="fa-icon">-->
+<!--                        <i class="fa fa-twitter"></i>-->
+<!--                      </a>-->
+<!--                      <a href="http://www.linkedin.com" title="" class="fa-icon">-->
+<!--                        <i class="fa fa-linkedin"></i>-->
                       </a>
 
                     </div>
@@ -118,15 +118,7 @@
   </div>
 
 
-<footer class="footer-container text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-      </div>
-    </div>
-  </div>
-</footer>
+
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
