--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -37,19 +37,19 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a style = "color: cyan;" href="./index.html" title="">01 : Home</a></li>
+<!--          <li><a style = "color: cyan;" href="./works.html" title="">02 : Works</a></li>-->
+          <li><a style = "color: cyan;" href="./about.html" title="">02 : About me</a></li>
+          <li><a style = "color: cyan;" href="./contact.html" title="">03 : Contact</a></li>
         </ul>
 
 
-      </div> 
+      </div>
     </div>
   </nav>
 </header>
-<!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+<!-- Add your site or app content here  style="background-image: url('./static/assets/images/space.jpg')"-->
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
